Add 3 User API
