# backend/dist/build/swagger.json
@@ -64,7 +64,7 @@
     },
     "openapi": "3.0.0",
     "paths": {
-        "/users": {
+        "/api/users": {
             "post": {
                 "operationId": "Add",
                 "responses": {
@@ -84,35 +84,48 @@
                         }
                     }
                 }
-            }
-        },
-        "/users/{userId}": {
+            },
             "get": {
-                "operationId": "Get",
+                "operationId": "GetUsers",
                 "responses": {
                     "200": {
                         "description": "Ok",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/User"
+                                    "items": {
+                                        "$ref": "#/components/schemas/User"
+                                    },
+                                    "type": "array"
                                 }
                             }
                         }
                     }
                 },
                 "security": [],
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "userId",
-                        "required": true,
-                        "schema": {
-                            "format": "double",
-                            "type": "number"
+                "parameters": []
+            }
+        },
+        "/api/users/{userId}": {
+            "get": {
+                "operationId": "GetById",
+                "responses": {
+                    "200": {
+                        "description": "Success Retrive",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "items": {
+                                        "$ref": "#/components/schemas/User"
+                                    },
+                                    "type": "array"
+                                }
+                            }
                         }
                     }
-                ]
+                },
+                "security": [],
+                "parameters": []
             }
         }
     },
